--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.25.0",
     "chart.js": "^3.7.0",
     "html-react-parser": "^1.4.6",
+    "loader": "^2.1.1",
     "millify": "^4.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
